--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -40,14 +41,13 @@ jobs:
     - name: Install Qt libraries for Github CI
       uses: tlambert03/setup-qt-libs@v1
 
-    #- name: Install Qt
-    #  uses: jurplel/install-qt-action@v3
-
     - name: Install Python package
       run: python -m pip install --no-cache-dir .[tests]
 
     - name: Install example entrypoints
-      run: cd example && python -m pip install --no-cache-dir . 
+      run: |
+        cd example
+        python -m pip install --no-cache-dir .
     
     - name: Run Python tests
       run: python -m pytest
